baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedClassList_render_prompt@InputNamedClassList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedClassList.baml
---
fixture = 'InputNamedClassList.baml'
function = 'FnInputNamedClassList'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
