baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedClassLiteralUnionProp_render_prompt@InputNamedClassLiteralUnionProp.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedClassLiteralUnionProp.baml
---
fixture = 'InputNamedClassLiteralUnionProp.baml'
function = 'FnInputNamedClassLiteralUnionProp'

[prompt]
type = 'Chat'

[[prompt.messages]]
role = 'system'

[[prompt.messages.content]]
type = 'Text'
text = '''
Return the same object you were given.
{
  prop: "one"
} or {
  prop: "two"
}'''
