baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedClass_render_prompt@InputNamedClass.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedClass.baml
---
fixture = 'InputNamedClass.baml'
function = 'FnInputNamedClass'

[prompt]
type = 'Completion'
text = '''
Print these values back to me:


'''
