baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedEnumList_render_prompt@InputNamedEnumList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedEnumList.baml
---
fixture = 'InputNamedEnumList.baml'
function = 'FnInputNamedEnumList'

[prompt]
type = 'Completion'
text = '''
Print these values back to me:
'''
