baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedEnum_render_prompt@InputNamedEnum.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedEnum.baml
---
fixture = 'InputNamedEnum.baml'
function = 'FnInputNamedEnum'

[prompt]
type = 'Completion'
text = '''
Print these values back to me:
'''
