baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedFloat_render_prompt@InputNamedFloat.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedFloat.baml
---
fixture = 'InputNamedFloat.baml'
function = 'FnInputNamedFloat'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
