baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedInt_render_prompt@InputNamedInt.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedInt.baml
---
fixture = 'InputNamedInt.baml'
function = 'FnInputNamedInt'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
